--- a/NightCore.Interop.Memory/NightCore.Interop.Memory.csproj
+++ b/NightCore.Interop.Memory/NightCore.Interop.Memory.csproj
@@ -1,19 +1,17 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFrameworks>netcoreapp3.0</TargetFrameworks>
-    <RootNamespace>NightCore.Interop.Win32</RootNamespace>
-
+    <TargetFramework>netcoreapp3.0</TargetFramework>
+    <RootNamespace>NightCore.Interop</RootNamespace>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <Nullable>enable</Nullable>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Version>0.0.2</Version>
-    <Description>Win32 API つかうやつ ― user32 編</Description>
+
+    <Version>0.0.1</Version>
+    <Description>Win32 API つかう用のメモリ扱うやつ</Description>
     <PackageProjectUrl>https://github.com/alice-alias/NightCore.Interop.Win32</PackageProjectUrl>
     <RepositoryUrl>https://github.com/alice-alias/NightCore.Interop.Win32.git</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <Authors>alice_alias</Authors>
   </PropertyGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\NightCore.Interop.Win32\NightCore.Interop.Win32.csproj" />
-  </ItemGroup>
 </Project>
