--- a/NightCore.Interop.Win32/NightCore.Interop.Win32.csproj
+++ b/NightCore.Interop.Win32/NightCore.Interop.Win32.csproj
@@ -1,9 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFrameworks>net461;netstandard2.0</TargetFrameworks>
+    <TargetFrameworks>netcoreapp3.0</TargetFrameworks>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     
-    <Version>0.0.1</Version>
+    <Version>0.0.2</Version>
     <Description>Win32 API つかうやつ ― kernel32 編</Description>
     <PackageProjectUrl>https://github.com/alice-alias/NightCore.Interop.Win32</PackageProjectUrl>
     <RepositoryUrl>https://github.com/alice-alias/NightCore.Interop.Win32.git</RepositoryUrl>
